--- a/react-project/src/blocks/header.css
+++ b/react-project/src/blocks/header.css
@@ -1,31 +1,39 @@
-.header{
-    display: flex;
-    justify-content: space-between;
+.header {
+  display: flex;
+  justify-content: space-between;
+  font-family: "Cabinet Grotesk", Helvetica, sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
 }
 
-.header__left{
-    display: flex;
-    justify-content: space-between;
-    gap: 24px;
+.header__left {
+  display: flex;
+  justify-content: space-between;
+  gap: 24px;
 }
 
-.header__right{
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
+.header__right {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
 }
 
-.header__button{
-    background-color: transparent;
-    border: none;
+.header__button {
+  font-family: "Cabinet Grotesk", Helvetica, sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  background-color: transparent;
+  border: none;
 }
 
-.header__button:hover{
+.header__button:hover {
   cursor: pointer;
   text-decoration: underline;
 }
 
-.header__avatar{
-    width: 40px;
-    height: 40px;
+.header__avatar {
+  width: 40px;
+  height: 40px;
 }
