--- a/react-project/src/blocks/itemcard.css
+++ b/react-project/src/blocks/itemcard.css
@@ -6,17 +6,21 @@
 }
 
 .itemcard__description {
+  font-family: "Cabinet Grotesk", Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20px;
   position: absolute;
   margin: 0;
+  padding-left: 12px;
+  padding-right: 12px;
   top: 15px;
-  /* z-index: 1; */
-  width: 73px;
   background-color: #f3f3f3;
   text-align: center;
   border-radius: 4px;
 }
 
-.itemcard__image{
+.itemcard__image {
   border-radius: 12px;
   max-width: 100%;
 }
