--- a/src/blocks/header.css
+++ b/src/blocks/header.css
@@ -10,9 +10,13 @@
 .header__left {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   gap: 24px;
 }
 
+.header__time{
+  align-self: flex-end;
+}
 .header__right {
   display: flex;
   justify-content: space-between;
@@ -44,4 +48,9 @@
 .header__avatar {
   width: 40px;
   height: 40px;
+}
+
+.header__link:link, .header__link:visited{
+  text-decoration: none;
+  color: #000;
 }
