--- a/src/blocks/itemcard.css
+++ b/src/blocks/itemcard.css
@@ -24,3 +24,19 @@
   border-radius: 12px;
   max-width: 100%;
 }
+
+.itemcard__like-btn{
+  width: 24px;
+  height: 20px;
+  background-image: url(../assets/unlike-btn.png);
+  background-repeat: no-repeat;
+  position:absolute;
+  right: 90px;
+  top: 15px;
+  border: none;
+  background-color: transparent;
+}
+
+.itemcard__like-btn_type_black{
+  background-image: url(../assets/Like-btn.png);
+}
