--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -7,7 +7,12 @@
 }
 
 .profile__sidebar {
-  max-width: 229px;
+  display:flex;
+  flex-direction: column;
+}
+
+.profile__info {
+   max-width: 229px;
   width: 229px;
   height: 56px;
   display: flex;
@@ -19,11 +24,65 @@
   line-height: 100%;
   letter-spacing: 0%;
   box-sizing: border-box;
+  margin-bottom: 24px;
 }
+
+.profile__edit-log{
+    max-width: 229px;
+  width: 229px;
+  height: 56px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  font-family: "Cabinet Grotesk", Helvetica, sans-serif;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 20px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  box-sizing: border-box;
+}
+
+.profile__edit-btn{
+text-align: left;
+border: none;
+background-color: transparent;
+ font-family: "Cabinet Grotesk", Helvetica, sans-serif;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 20px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  box-sizing: border-box;
+}
+
+.profile__edit-btn:hover{
+ cursor: pointer;
+}
+
+
+.profile__logout-btn{
+text-align: left;
+border: none;
+background-color: transparent;
+ font-family: "Cabinet Grotesk", Helvetica, sans-serif;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 20px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  box-sizing: border-box;
+}
+
+.profile__logout-btn:hover{
+  cursor: pointer;
+}
+
 
 .profile__avatar {
   width: 56px;
   height: 56px;
+  border-radius: 50%;
 }
 
 .profile__user {
