--- a/src/blocks/modalwithform.css
+++ b/src/blocks/modalwithform.css
@@ -96,15 +96,14 @@
   border: none;
 }
 
- .modal__submit-btn:disabled{
-  background-color : #0000004D;
+.modal__submit-btn:disabled {
+  background-color: #0000004d;
   cursor: not-allowed;
-} 
+}
 
-.modal__submit-btn:not(:disabled)hover{
+.modal__submit-btn:not(:disabled):hover {
   cursor: pointer;
   background-color: #00000099;
-
 }
 
 .modal__content_type_image {
@@ -130,7 +129,7 @@
   justify-content: space-between;
 }
 
-.modal__del-btn{
+.modal__del-btn {
   font-family: "Cabinet Grotesk", Helvetica, sans-serif;
   font-weight: 700;
   font-size: 20px;
@@ -138,10 +137,9 @@
   align-self: flex-start;
   margin: 0;
   padding: 2px 34px 0 0;
-  color: #FF4D00;
+  color: #ff4d00;
   border: none;
-  background-color: transparent
-;
+  background-color: transparent;
 }
 
 .modal__caption {
@@ -154,39 +152,38 @@
   padding: 5px 0;
 }
 
-.modal__del-top{
- text-align: center;
- margin-bottom: 0;
+.modal__del-top {
+  text-align: center;
+  margin-bottom: 0;
 }
 
-.modal__content_type_delete{
-   font-family: "Cabinet Grotesk", Helvetica, sans-serif;
+.modal__content_type_delete {
+  font-family: "Cabinet Grotesk", Helvetica, sans-serif;
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
   padding: 28px 28px 0 28px;
 }
 
-.modal__del-span{
-  display:block;
+.modal__del-span {
+  display: block;
   text-align: center;
   margin-bottom: 40px;
 }
 
-.modal__del-mdl{
+.modal__del-mdl {
   margin-bottom: 24px;
-  color: #FF4D00;
+  color: #ff4d00;
   border: none;
   background-color: transparent;
-
 }
 
-.modal__del-btm{
+.modal__del-btm {
   margin-bottom: 60px;
-   border: none;
+  border: none;
   background-color: transparent;
 }
 
-.modal__validation{
-  color: #FF4D00;
+.modal__validation {
+  color: #ff4d00;
 }
