--- a/src/blocks/modalwithform.css
+++ b/src/blocks/modalwithform.css
@@ -106,6 +106,11 @@
   background-color: #00000099;
 }
 
+.modal__image{
+  width:498px;
+  height: 349px;
+  
+}
 .modal__content_type_image {
   width: 498px;
   padding: 0;
